Wed Jul 22 11:59:59 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* st.c (rehash): still had a GC problem.  fixed.

Tue Jul 21 13:19:30 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (gc_mark_threads): crashed on GC before thread allocation.

	* st.c (rehash): GC during rehash caused SEGV.

Tue Jul 21 01:25:10 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* sprintf.c (f_sprintf): integer formatter totally re-written.

	* sprintf.c (remove_sign_bits): support uppercase hexadecimal.

Sat Jul 18 00:14:13 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* sprintf.c (f_sprintf): proper sign position for %X and %O.

Fri Jul 17 14:10:20 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1c0 released.

Fri Jul 17 08:01:49 1998  Tadayoshi Funaba  <tadf@kt.rim.or.jp>

	* process.c (f_exec): Check_SafeStr() added.

	* process.c (f_system): Check_SafeStr() moved before fork().

Thu Jul 16 22:58:48 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (scan_once): substrings to the block should not be
 	  tainted.  use reg_nth_match(), not str_substr().

	* string.c (str_substr): needed to transfer taint.

Thu Jul 16 16:15:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* gc.c (xmalloc): object allocation count added to GC trigger.

	* eval.c (thread_save_context): avoid marking uninitialized stack
	  in thread_mark.  GC may be triggered by REALLOC_N().

Wed Jul 15 15:11:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_31.

Wed Jul 15 15:05:27 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (thread_create): exit() and abort() in threads now
 	  forwarded to main_thread.

Tue Jul 14 14:03:47 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* variable.c (obj_instance_variables): list names that is not
	  instance variables.

	* gc.c (GC_MALLOC_LIMIT): choose smaller limit value.

Mon Jul 13 12:39:38 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* object.c (str2cstr): should not return NULL.
